--- a/style.css
+++ b/style.css
@@ -9,7 +9,30 @@ body {
   padding-bottom:-20px;
   background-color: #006400;
 }
+footer {
+    background-color: #222;
+    color: #fff;
+    font-size: 14px;
+    bottom: 0;
+    position: fixed;
+    left: 0;
+    right: 0;
+    text-align: center;
+    z-index: 999;
+}
 
+footer p {
+    margin: 10px 0;
+}
+
+footer i {
+    color: red;
+}
+
+footer a {
+    color: #3c97bf;
+    text-decoration: none;
+}
 h4 {
   margin-top: 40px;
   text-align: center;
